src/antlr/TypeScripteParser.java
// Generated from C:/Users/USER/Desktop/4th-2/Compiler2/New folder/compiler_pro/src/antlr/TypeScripteParser.g4 by ANTLR 4.13.2
package antlr;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class TypeScripteParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		WS=1, LINE_COMMENT=2, BLOCK_COMMENT=3, IMPORT=4, FROM=5, EXPORT=6, CLASS=7, 
		INTERFACE=8, COMPONENT=9, MYSTRING=10, INJECTABLE=11, PROVIDEDIN=12, ROOT=13, 
		IF=14, ELSE=15, FOR=16, RETURN=17, NEW=18, PROTECTED=19, PRIVATE=20, PUBLIC=21, 
		INT=22, VAR=23, SELECTOR=24, TEMPLATE=25, IMPORTS=26, STANDALONE=27, CONST=28, 
		THIS=29, LET=30, TRUE=31, FALSE=32, NULL=33, AT=34, LBRACE=35, RBRACE=36, 
		LBRACKET=37, RBRACKET=38, LPAREN=39, RPAREN=40, COLON=41, COMMA=42, SEMICOLON=43, 
		DOTDOTDOT=44, DOLAR=45, DOT=46, PLUS=47, MINUS=48, STAR=49, MOD=50, EQUALS=51, 
		NOTEQUALS=52, ANDAND=53, OROR=54, GREATERTHAN=55, CONSTRUCTOR=56, BOOLEAN=57, 
		VOID=58, BACKTICK=59, PIPE=60, ARROW=61, OPEN_SYMBOL=62, CLOSED_SYMBOL=63, 
		SLASHSELF=64, STRING=65, NUMBER=66, IDENTIFIER=67, ANGULAR_EXPRESSION=68, 
		TEXT=69, TAG_NAME=70, SPASE=71, SLASH=72;
	public static final int
		RULE_program = 0, RULE_statement = 1, RULE_injectableDeclaration = 2, 
		RULE_injectableBody = 3, RULE_importStatement = 4, RULE_componentDeclaration = 5, 
		RULE_componentBody = 6, RULE_field = 7, RULE_selectorField = 8, RULE_templateField = 9, 
		RULE_backTemplate = 10, RULE_importsField = 11, RULE_standaloneField = 12, 
		RULE_otherFields = 13, RULE_classDeclaration = 14, RULE_classBody = 15, 
		RULE_propertyDeclaration = 16, RULE_constructorCall = 17, RULE_methodDeclaration = 18, 
		RULE_parameterList = 19, RULE_parameter = 20, RULE_methodBody = 21, RULE_type = 22, 
		RULE_primitiveType = 23, RULE_expression = 24, RULE_literal = 25, RULE_arrayLiteral = 26, 
		RULE_objectLiteral = 27, RULE_propertyAssignment = 28, RULE_functionCall = 29, 
		RULE_arrowFunction = 30, RULE_lt = 31, RULE_gt = 32, RULE_operation = 33, 
		RULE_keys = 34, RULE_assignmentExpression = 35, RULE_propertyAccess = 36, 
		RULE_expressionStatement = 37, RULE_forLoop = 38, RULE_ifStatement = 39, 
		RULE_variableDeclaration = 40, RULE_constructor = 41, RULE_htmlRoot = 42, 
		RULE_element = 43, RULE_completeTag = 44, RULE_selfClosingTag = 45, RULE_openTag = 46, 
		RULE_closedTag = 47, RULE_angularExpression = 48, RULE_text = 49, RULE_content = 50, 
		RULE_normalAttribute = 51, RULE_bindingAttribute = 52, RULE_direvtiveAttribute = 53, 
		RULE_eventAttribute = 54, RULE_twoWayBindingAttribute = 55;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "statement", "injectableDeclaration", "injectableBody", "importStatement", 
			"componentDeclaration", "componentBody", "field", "selectorField", "templateField", 
			"backTemplate", "importsField", "standaloneField", "otherFields", "classDeclaration", 
			"classBody", "propertyDeclaration", "constructorCall", "methodDeclaration", 
			"parameterList", "parameter", "methodBody", "type", "primitiveType", 
			"expression", "literal", "arrayLiteral", "objectLiteral", "propertyAssignment", 
			"functionCall", "arrowFunction", "lt", "gt", "operation", "keys", "assignmentExpression", 
			"propertyAccess", "expressionStatement", "forLoop", "ifStatement", "variableDeclaration", 
			"constructor", "htmlRoot", "element", "completeTag", "selfClosingTag", 
			"openTag", "closedTag", "angularExpression", "text", "content", "normalAttribute", 
			"bindingAttribute", "direvtiveAttribute", "eventAttribute", "twoWayBindingAttribute"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, null, "'import'", "'from'", "'export'", "'class'", 
			"'interface'", "'Component'", "'String'", "'Injectable'", "'providedIn'", 
			"'root'", "'if'", "'else'", "'for'", "'return'", "'new'", "'protected'", 
			"'private'", "'public'", "'int'", "'var'", "'selector'", "'template'", 
			"'imports'", "'standalone'", "'const'", "'this'", "'let'", "'true'", 
			"'false'", "'null'", "'@'", "'{'", "'}'", "'['", "']'", "'('", "')'", 
			"':'", "','", "';'", "'...'", "'$'", "'.'", "'+'", "'-'", "'*'", "'%'", 
			"'='", "'!=='", "'&&'", "'||'", "'>='", "'constructor'", "'boolean'", 
			"'void'", "'`'", "'|'", "'=>'", "'<'", "'>'", null, null, null, null, 
			null, null, null, "' '"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "WS", "LINE_COMMENT", "BLOCK_COMMENT", "IMPORT", "FROM", "EXPORT", 
			"CLASS", "INTERFACE", "COMPONENT", "MYSTRING", "INJECTABLE", "PROVIDEDIN", 
			"ROOT", "IF", "ELSE", "FOR", "RETURN", "NEW", "PROTECTED", "PRIVATE", 
			"PUBLIC", "INT", "VAR", "SELECTOR", "TEMPLATE", "IMPORTS", "STANDALONE", 
			"CONST", "THIS", "LET", "TRUE", "FALSE", "NULL", "AT", "LBRACE", "RBRACE", 
			"LBRACKET", "RBRACKET", "LPAREN", "RPAREN", "COLON", "COMMA", "SEMICOLON", 
			"DOTDOTDOT", "DOLAR", "DOT", "PLUS", "MINUS", "STAR", "MOD", "EQUALS", 
			"NOTEQUALS", "ANDAND", "OROR", "GREATERTHAN", "CONSTRUCTOR", "BOOLEAN", 
			"VOID", "BACKTICK", "PIPE", "ARROW", "OPEN_SYMBOL", "CLOSED_SYMBOL", 
			"SLASHSELF", "STRING", "NUMBER", "IDENTIFIER", "ANGULAR_EXPRESSION", 
			"TEXT", "TAG_NAME", "SPASE", "SLASH"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "TypeScripteParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public TypeScripteParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(TypeScripteParser.EOF, 0); }
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TypeScripteParserListener ) ((TypeScripteParserListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TypeScripteParserListener ) ((TypeScripteParserListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TypeScripteParserVisitor ) return ((TypeScripteParserVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(115);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & -4469962611994835760L) != 0) || ((((_la - 65)) & ~0x3f) == 0 && ((1L << (_la - 65)) & 135L) != 0)) {
				{
				{
				setState(112);
				statement();
				}
				}
				setState(117);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(118);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StatementContext extends ParserRuleContext {
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
	 
		public StatementContext() { }
		public void copyFrom(StatementContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ComponentStmtContext extends StatementContext {
		public ComponentDeclarationContext componentDeclaration() {
			return getRuleContext(ComponentDeclarationContext.class,0);
		}
		public ComponentStmtContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TypeScripteParserListener ) ((TypeScripteParserListener)listener).enterComponentStmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TypeScripteParserListener ) ((TypeScripteParserListener)listener).exitComponentStmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TypeScripteParserVisitor ) return ((TypeScripteParserVisitor<? extends T>)visitor).visitComponentStmt(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ObjectLiteralStmtContext extends StatementContext {
		public ObjectLiteralContext objectLiteral() {
			return getRuleContext(ObjectLiteralContext.class,0);
		}
		public ObjectLiteralStmtContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TypeScripteParserListener ) ((TypeScripteParserListener)listener).enterObjectLiteralStmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TypeScripteParserListener ) ((TypeScripteParserListener)listener).exitObjectLiteralStmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TypeScripteParserVisitor ) return ((TypeScripteParserVisitor<? extends T>)visitor).visitObjectLiteralStmt(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ImportStmtContext extends StatementContext {
		public ImportStatementContext importStatement() {
			return getRuleContext(ImportStatementContext.class,0);
		}
		public ImportStmtContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TypeScripteParserListener ) ((TypeScripteParserListener)listener).enterImportStmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TypeScripteParserListener ) ((TypeScripteParserListener)listener).exitImportStmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TypeScripteParserVisitor ) return ((TypeScripteParserVisitor<? extends T>)visitor).visitImportStmt(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class IfStmtContext extends StatementContext {
		public IfStatementContext ifStatement() {
			return getRuleContext(IfStatementContext.class,0);
		}
		public IfStmtContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TypeScripteParserListener ) ((TypeScripteParserListener)listener).enterIfStmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TypeScripteParserListener ) ((TypeScripteParserListener)listener).exitIfStmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TypeScripteParserVisitor ) return ((TypeScripteParserVisitor<? extends T>)visitor).visitIfStmt(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ExprStmtContext extends StatementContext {
		public ExpressionStatementContext expressionStatement() {
			return getRuleContext(ExpressionStatementContext.class,0);
		}
		public ExprStmtContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TypeScripteParserListener ) ((TypeScripteParserListener)listener).enterExprStmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TypeScripteParserListener ) ((TypeScripteParserListener)listener).exitExprStmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TypeScripteParserVisitor ) return ((TypeScripteParserVisitor<? extends T>)visitor).visitExprStmt(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class VariableStmtContext extends StatementContext {
		public VariableDeclarationContext variableDeclaration() {
			return getRuleContext(VariableDeclarationContext.class,0);
		}
		public VariableStmtContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TypeScripteParserListener ) ((TypeScripteParserListener)listener).enterVariableStmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TypeScripteParserListener ) ((TypeScripteParserListener)listener).exitVariableStmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TypeScripteParserVisitor ) return ((TypeScripteParserVisitor<? extends T>)visitor).visitVariableStmt(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ForLoopStmtContext extends StatementContext {
		public ForLoopContext forLoop() {
			return getRuleContext(ForLoopContext.class,0);
		}
		public ForLoopStmtContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TypeScripteParserListener ) ((TypeScripteParserListener)listener).enterForLoopStmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TypeScripteParserListener ) ((TypeScripteParserListener)listener).exitForLoopStmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TypeScripteParserVisitor ) return ((TypeScripteParserVisitor<? extends T>)visitor).visitForLoopStmt(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class InjectableStmtContext extends StatementContext {
		public InjectableDeclarationContext injectableDeclaration() {
			return getRuleContext(InjectableDeclarationContext.class,0);
		}
		public InjectableStmtContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TypeScripteParserListener ) ((TypeScripteParserListener)listener).enterInjectableStmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TypeScripteParserListener ) ((TypeScripteParserListener)listener).exitInjectableStmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TypeScripteParserVisitor ) return ((TypeScripteParserVisitor<? extends T>)visitor).visitInjectableStmt(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ClassStmtContext extends StatementContext {
		public ClassDeclarationContext classDeclaration() {
			return getRuleContext(ClassDeclarationContext.class,0);
		}
		public ClassStmtContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TypeScripteParserListener ) ((TypeScripteParserListener)listener).enterClassStmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TypeScripteParserListener ) ((TypeScripteParserListener)listener).exitClassStmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TypeScripteParserVisitor ) return ((TypeScripteParserVisitor<? extends T>)visitor).visitClassStmt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_statement);
		try {
			setState(129);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				_localctx = new ImportStmtContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(120);
				importStatement();
				}
				break;
			case 2:
				_localctx = new ComponentStmtContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(121);
				componentDeclaration();
				}
				break;
			case 3:
				_localctx = new InjectableStmtContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(122);
				injectableDeclaration();
				}
				break;
			case 4:
				_localctx = new VariableStmtContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(123);
				variableDeclaration();
				}
				break;
			case 5:
				_localctx = new ObjectLiteralStmtContext(_localctx);
				enterOuterAlt(_localctx, 5);
				{
				setState(124);
				objectLiteral();
				}
				break;
			case 6:
				_localctx = new ExprStmtContext(_localctx);
				enterOuterAlt(_localctx, 6);
				{
				setState(125);
				expressionStatement();
				}
				break;
			case 7:
				_localctx = new ClassStmtContext(_localctx);
				enterOuterAlt(_localctx, 7);
				{
				setState(126);
				classDeclaration();
				}
				break;
			case 8:
				_localctx = new ForLoopStmtContext(_localctx);
				enterOuterAlt(_localctx, 8);
				{
				setState(127);
				forLoop();
				}
				break;
			case 9:
				_localctx = new IfStmtContext(_localctx);
				enterOuterAlt(_localctx, 9);
				{
				setState(128);
				ifStatement();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class InjectableDeclarationContext extends ParserRuleContext {
		public TerminalNode AT() { return getToken(TypeScripteParser.AT, 0); }
		public TerminalNode INJECTABLE() { return getToken(TypeScripteParser.INJECTABLE, 0); }
		public TerminalNode LPAREN() { return getToken(TypeScripteParser.LPAREN, 0); }
		public TerminalNode LBRACE() { return getToken(TypeScripteParser.LBRACE, 0); }
		public InjectableBodyContext injectableBody() {
			return getRuleContext(InjectableBodyContext.class,0);
		}
		public TerminalNode RBRACE() { return getToken(TypeScripteParser.RBRACE, 0); }
		public TerminalNode RPAREN() { return getToken(TypeScripteParser.RPAREN, 0); }
		public InjectableDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_injectableDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TypeScripteParserListener ) ((TypeScripteParserListener)listener).enterInjectableDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TypeScripteParserListener ) ((TypeScripteParserListener)listener).exitInjectableDeclaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TypeScripteParserVisitor ) return ((TypeScripteParserVisitor<? extends T>)visitor).visitInjectableDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InjectableDeclarationContext injectableDeclaration() throws RecognitionException {
		InjectableDeclarationContext _localctx = new InjectableDeclarationContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_injectableDeclaration);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(131);
			match(AT);
			setState(132);
			match(INJECTABLE);
			setState(133);
			match(LPAREN);
			setState(134);
			match(LBRACE);
			setState(135);
			injectableBody();
			setState(136);
			match(RBRACE);
			setState(137);
			match(RPAREN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class InjectableBodyContext extends ParserRuleContext {
		public TerminalNode PROVIDEDIN() { return getToken(TypeScripteParser.PROVIDEDIN, 0); }
		public TerminalNode COLON() { return getToken(TypeScripteParser.COLON, 0); }
		public TerminalNode STRING() { return getToken(TypeScripteParser.STRING, 0); }
		public InjectableBodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_injectableBody; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TypeScripteParserListener ) ((TypeScripteParserListener)listener).enterInjectableBody(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TypeScripteParserListener ) ((TypeScripteParserListener)listener).exitInjectableBody(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TypeScripteParserVisitor ) return ((TypeScripteParserVisitor<? extends T>)visitor).visitInjectableBody(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InjectableBodyContext injectableBody() throws RecognitionException {
		InjectableBodyContext _localctx = new InjectableBodyContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_injectableBody);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(139);
			match(PROVIDEDIN);
			setState(140);
			match(COLON);
			setState(141);
			match(STRING);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
